[gd_scene load_steps=5 format=3 uid="uid://cr5q2pl1b3k5i"]

[ext_resource type="Script" path="res://Scenes/LevelEditor/Scripts/GUI.gd" id="1_6skbw"]
[ext_resource type="Theme" uid="uid://bd725jg7oypxg" path="res://Scenes/LevelEditor/Assests/Resources/LevelEdit.theme" id="1_kttku"]
[ext_resource type="PackedScene" uid="uid://bew805xd3sxdv" path="res://Scenes/LevelEditor/meshlib_panel.tscn" id="4_ros54"]
[ext_resource type="Script" path="res://Scenes/LevelEditor/Scripts/LibSelectPanel.gd" id="5_tobjh"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kttku")
script = ExtResource("1_6skbw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -224.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MoveKeys" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
columns = 3

[node name="RButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/MoveKeys"]
layout_mode = 2
toggle_mode = true
button_mask = 0
text = "Clear"

[node name="WButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/MoveKeys"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_mask = 0
text = "W"

[node name="Z" type="SpinBox" parent="PanelContainer/MarginContainer/HBoxContainer/MoveKeys"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 5.0
rounded = true
alignment = 1

[node name="AButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/MoveKeys"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_mask = 0
text = "A"

[node name="SButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/MoveKeys"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_mask = 0
text = "S"

[node name="DButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/MoveKeys"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_mask = 0
text = "D"

[node name="MeshlibPanel" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_ros54")]
layout_mode = 2
size_flags_horizontal = 3

[node name="FunctionKeys" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
columns = 2

[node name="SetButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/FunctionKeys"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
toggle_mode = true
button_mask = 0
text = "Set"

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/FunctionKeys"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_mask = 0
text = "Back"

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/FunctionKeys"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_mask = 0
text = "Save"

[node name="LoadButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/FunctionKeys"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_mask = 0
text = "Load"

[node name="SelectWindow" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_tobjh")

[node name="CenterContainer" type="CenterContainer" parent="SelectWindow"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="SelectWindow/CenterContainer"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SelectWindow/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="LibSelectPanel" type="VBoxContainer" parent="SelectWindow/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SelectWindow/CenterContainer/PanelContainer/MarginContainer/LibSelectPanel"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="SelectWindow/CenterContainer/PanelContainer/MarginContainer/LibSelectPanel/HBoxContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="LibListBox" type="VBoxContainer" parent="SelectWindow/CenterContainer/PanelContainer/MarginContainer/LibSelectPanel/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewPanel" type="TextureRect" parent="SelectWindow/CenterContainer/PanelContainer/MarginContainer/LibSelectPanel/HBoxContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
expand_mode = 1
